--- a/config-client.yml
+++ b/config-client.yml
@@ -1,2 +1,2 @@
 configuration:
-    projectName: SpringBoot and Cloud sample by Nithin - Edited
+    projectName: SpringBoot and Cloud sample by Nithin - Reverted
